--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,17 @@ p {
   flex-direction: column;
   align-items: center;
   cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.question__block:hover {
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.08), 0 2px 4px rgba(0, 0, 0, 0.08);
+  scale: 1.04;
+}
+
+.question__block:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
 }
 
 .question__block p {
@@ -89,6 +100,10 @@ p {
 .question__block a {
   text-decoration: none;
   color: rgb(165, 165, 165);
+}
+
+.question__block a:hover {
+  color: rgb(102, 69, 221);
 }
 
 .question__block img {
