--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,10 @@ p {
   object-fit: cover;
 }
 
+.answer__block {
+  width: 600px;
+}
+
 @media screen and (min-width: 1300px) {
   .App {
     width: 1200px;
