--- a/src/index.css
+++ b/src/index.css
@@ -114,11 +114,46 @@ p {
 
 .answer__block {
   width: 600px;
+  color: white;
+  background-color: rgb(255, 61, 158);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 400px;
+  margin-top: 200px;
+  overflow: hidden;
+}
+
+.answer__block h2 {
+  padding: 2rem;
+  text-align: center;
+}
+
+.answer__block h3 {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.274);
+  width: 100%;
+  text-align: center;
+  padding: 0.75rem;
+  margin: 0;
+}
+
+.answer__block img {
+  width: 100%;
 }
 
 @media screen and (min-width: 1300px) {
   .App {
     width: 1200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .questions__container {
+    width: 100%;
   }
 
   .title__block {
@@ -126,7 +161,7 @@ p {
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 620px) {
   h1 {
     font-size: 1.5rem;
   }
@@ -137,6 +172,10 @@ p {
 
   .App {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   .questions__container {
@@ -145,5 +184,9 @@ p {
 
   .title__block {
     width: 100%;
+  }
+
+  .answer__block {
+    width: 90%;
   }
 }
