--- a/src/index.css
+++ b/src/index.css
@@ -121,8 +121,8 @@ p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 400px;
-  margin-top: 200px;
+  margin-bottom: 500px;
+  margin-top: 100px;
   overflow: hidden;
 }
 
@@ -141,6 +141,23 @@ p {
 
 .answer__block img {
   width: 100%;
+}
+
+.answer__block button {
+  margin-bottom: 1rem;
+  padding: 0.5rem 1rem;
+  background-color: rgb(255, 61, 158);
+  color: white;
+  border-radius: 5px;
+  border: 1px solid rgba(255, 255, 255, 0);
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.answer__block button:hover {
+  background-color: rgb(255, 61, 158);
+  color: white;
+  border: 1px solid rgba(255, 255, 255, 0.65);
 }
 
 @media screen and (min-width: 1300px) {
